--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -1727,20 +1727,7 @@ textarea.w-select {
  * 2. Prevent iOS and IE text size adjust after device orientation change,
  *    without disabling user zoom.
  */
-html {
-  font-family: sans-serif;
-  /* 1 */
-  -ms-text-size-adjust: 100%;
-  /* 2 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
-}
-/**
- * Remove default margin.
- */
-body {
-  margin: 0;
-}
+
 /* HTML5 display definitions
    ========================================================================== */
 /**
@@ -3083,4 +3070,8 @@ margin: 0rem !important;
 
 .chat_conversation-wrapper tr:nth-child(even) {
   background: #f9f9f9 !important; /* Slightly lighter gray */
+}
+
+html {
+  margin-top: 14px !important;
 }
