--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -2293,10 +2293,10 @@ figcaption {
   border: 1px solid #949494;
   border-radius: 35px;
   grid-template-rows: auto;
-  grid-template-columns: 70px 63px 1fr auto;
+  grid-template-columns: 63px 63px 63px 1fr auto;
   grid-auto-columns: 1fr;
   width: 100%;
-  max-width: 48rem;
+  max-width: 52rem;
   padding-top: 8px;
   padding-bottom: 8px;
   padding-right: 8px;
