--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -2660,7 +2660,7 @@ figcaption {
   grid-area: span 1 / span 2 / span 1 / span 2;
 }
 
-#w-node-_65169329-54c4-8195-cf7f-c09cde35a8e3-8f158f72 {
+#chat-file-input {
   place-self: end center;
 }
 
