--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -3096,3 +3096,8 @@ margin: 0rem !important;
   width: 100%;
   height: 100%;
 }
+
+/* Targets first element in chat blocks */
+.chat_inner-wrapper > *:first-child {
+  margin-top: 0 !important;
+}
