--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -2333,9 +2333,17 @@ figcaption {
   .chat_input-wrapper {
     left: 10px; /* Add margin on the left */
     right: 10px; /* Add margin on the right */
-    width: calc(100% - 20px); /* Adjust width to account for side margins */
+    width: calc(100% - 40px); /* Adjust width to account for side margins */
     max-width: none; /* Remove max-width constraint */
   }
+}
+
+.chat_block-wrapper {
+  justify-content: center;
+  width: 100%;
+  padding: 25px 0px;
+  display: flex;
+  position: relative;
 }
 
 .chat_block-wrapper.is-multi-choice-options {
