--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -3012,6 +3012,11 @@ margin: 0rem !important;
   font-size: 16px !important;
 }
 
+.chat_conversation-wrapper ul {
+  margin: 1em 0 !important;
+  font-size: 16px !important;
+}
+
 .chat_conversation-wrapper ul ul, 
 .chat_conversation-wrapper ol ol {
   padding-left: 20px !important; /* Further reduced for nested lists */
